[gd_scene load_steps=2 format=3 uid="uid://dvkr4cn3ym5qa"]

[ext_resource type="Script" path="res://Script/TestAffichageRessource.gd" id="1_dr26g"]

[node name="HBoxContainer" type="HBoxContainer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -902.0
offset_bottom = -622.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dr26g")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2
text = "Nom"

[node name="QuantityLabel" type="Label" parent="."]
layout_mode = 2
text = "Quantity"

[node name="PerSecLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
text = "PerSec"
